--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 	},
 	"require-dev": {
 		"phpunit/phpunit": "^9.5",
-		"phpstan/phpstan": "^1.6"
+		"phpstan/phpstan": "^1.6",
+		"fakerphp/faker": "^1.19"
 	},
 	"autoload": {
 		"psr-4": {
