add(workflow): testing with phpstan

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,3 +41,6 @@ jobs:
 
       - name: Testing with PHPUnit
         run: vendor/bin/phpunit --verbose
+
+      - name: Testing with PHPStan
+        run: vendor/bin/phpstan -v
